syntax = "proto3";

package kiosk;
option go_package = "g/rpc/kiosk";

message Id {
    int64 id = 1;
}

message Page {
    int32 number = 1;
    int32 size = 2;
    bool has_next = 3;
}

message Ticket {
    int64 id = 1;
    string issuer = 2;
    string owner = 3;
    string subject = 4;
    string content = 5;
    string metadata = 6;
    TicketImportanceLevel ticket_importance_level = 7;
    TicketStatus ticket_status = 8;
    repeated Comment comments = 9;
    string issued_at = 10;
    string updated_at = 11;
}

enum TicketImportanceLevel {
    ZERO = 0;
    LOW = 1;
    MEDIUM = 2;
    HIGH = 3;
    CRITICAL = 4;
}

enum TicketStatus {
    NONE = 0;
    NEW = 1;
    REPLIED = 2;
    RESOLVED = 3;
    CLOSED = 4;
    BLOCKED = 5;
}

message Comment {
    int64 id = 1;
    int64 ticket_id = 2;
    string owner = 3;
    string content = 4;
    string metadata = 5;
    string created_at = 6;
    string updated_at = 7;
}
